crud_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      labels:
        app: crud-app
    spec:
      containers:
        - name: crud-app
          image: koskinentht/crud-app:v0.5
