crud_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-app-svc
spec:
  type: ClusterIP
  selector:
    app: crud-app
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3001 # This is the target port
